--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "devDependencies": {
         "plop": "^2.2.0",
         "simple-git": "^1.107.0"
+    },
+    "dependencies": {
+        "chalk": "latest"
     }
 }
