--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name": "@pospolitanv/rbk-templator",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "scripts": {
         "plop": "plop"
     },
-    "devDependencies": {
-        "plop": "^2.2.0",
-        "simple-git": "^1.107.0"
-    },
     "dependencies": {
-        "chalk": "latest"
+        "chalk": "latest",
+        "plop": "^2.2.0",
+        "simple-git": "^1.107.0",
+        "child_process": "^1.0.2"
+    },
+    "bin": {
+        "rbk-templator": "./index.js"
     }
 }
