add color schema for console

--- a/plop-templates/service/spring.yml
+++ b/plop-templates/service/spring.yml
@@ -10,6 +10,9 @@ management:
 spring:
   application:
     name: @project.name@
+  output:
+    ansi:
+      enabled: always
 info:
   version: @project.version@
   stage: dev
