--- a/plop-templates/service/spring.yml
+++ b/plop-templates/service/spring.yml
@@ -7,6 +7,7 @@ management:
     export:
       statsd:
         flavor: etsy
+        enabled: false
 spring:
   application:
     name: @project.name@
