--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "@pospolitanv/rbk-templator",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "scripts": {
         "plop": "plop"
     },
     "dependencies": {
-        "chalk": "2.4.1",
-        "plop": "2.2.0",
-        "simple-git": "1.107.0",
-        "child_process": "1.0.2"
+        "chalk": "latest",
+        "plop": "^2.2.0",
+        "simple-git": "^1.107.0",
+        "child_process": "^1.0.2"
     },
     "bin": {
         "rbk-templator": "./index.js"
