--- a/plop-templates/service/spring.yml
+++ b/plop-templates/service/spring.yml
@@ -1,5 +1,5 @@
 server:
-  port: @server.port@
+  port: '@server.port@'
 
 management:
   security:
@@ -13,10 +13,10 @@ management:
 
 spring:
   application:
-    name: @project.name@
+    name: '@project.name@'
   output:
     ansi:
       enabled: always
 info:
-  version: @project.version@
+  version: '@project.version@'
   stage: dev
