Switch to custom-metrics-spring-boot-starter

--- a/plop-templates/service/spring.yml
+++ b/plop-templates/service/spring.yml
@@ -4,12 +4,26 @@ server:
 management:
   security:
     flag: false
+  server:
+    port: @management.port@
   metrics:
     export:
       statsd:
-        enabled: false
         flavor: etsy
-  endpoint.health.show-details: always
+        enabled: false
+      prometheus:
+        enabled: false
+  endpoint:
+    health:
+      show-details: always
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
 
 spring:
   application:
