JD-180 add kotlin templates

--- a/plop-templates/adapter/payout/pom.xml
+++ b/plop-templates/adapter/payout/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.rbkmoney</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>1.0.8</version>
+        <version>1.0.9</version>
     </parent>
 
     <artifactId>adapter-{{kebabCase bank_name}}-payout</artifactId>
@@ -18,6 +18,10 @@
 
     <properties>
         <java.version>11</java.version>
+        {{#if_eq language 'Kotlin'}}
+        <kotlin.version>1.4.31</kotlin.version>
+        {{/if_eq}}
+
         <server.port>8022</server.port>
         <management.port>8023</management.port>
         <exposed.ports>${server.port} ${management.port}</exposed.ports>
@@ -25,6 +29,18 @@
     </properties>
 
     <dependencies>
+        {{#if_eq language 'Kotlin'}}
+        <!--kotlin-->
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+        </dependency>
+        {{/if_eq}}
+
         <!--rbkmoney-->
         <dependency>
             <groupId>com.rbkmoney</groupId>
@@ -97,17 +113,24 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!--third party-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
+        {{#if_eq language 'Java'}}
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        {{/if_eq}}
 
         <!--test-->
         <dependency>
@@ -118,6 +141,8 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>${project.basedir}/src/main/{{lowerCase language}}</sourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/{{lowerCase language}}</testSourceDirectory>
         <resources>
             <resource>
                 <directory>${project.build.directory}/maven-shared-archive-resources</directory>
@@ -144,6 +169,46 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            {{#if_eq language 'Kotlin'}}
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <configuration>
+                    <args>
+                        <arg>-Xjsr305=strict</arg>
+                    </args>
+                    <compilerPlugins>
+                        <plugin>spring</plugin>
+                        <plugin>jpa</plugin>
+                    </compilerPlugins>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>kapt</id>
+                        <goals>
+                            <goal>kapt</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>src/main/kotlin</sourceDir>
+                            </sourceDirs>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-allopen</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-noarg</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            {{/if_eq}}
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-remote-resources-plugin</artifactId>
