JD-181 set Kotlin checkstyle

--- a/plop-templates/adapter/payout/pom.xml
+++ b/plop-templates/adapter/payout/pom.xml
@@ -208,6 +208,19 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <plugin>
+                <groupId>com.github.gantsign.maven</groupId>
+                <artifactId>ktlint-maven-plugin</artifactId>
+                <version>1.9.0</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             {{/if_eq}}
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
