--- a/plop-templates/adapter/payout/pom.xml
+++ b/plop-templates/adapter/payout/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.rbkmoney</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>1.0.9</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>adapter-{{kebabCase bank_name}}-payout</artifactId>
@@ -26,6 +26,11 @@
         <management.port>8023</management.port>
         <exposed.ports>${server.port} ${management.port}</exposed.ports>
         <dockerfile.registry>${env.REGISTRY}</dockerfile.registry>
+
+        {{#if_eq language 'Kotlin'}}
+        <kotlin-logging.version>2.0.6</kotlin-logging.version>
+        <mockito-kotlin.version>3.2.0</mockito-kotlin.version>
+        {{/if_eq}}
     </properties>
 
     <dependencies>
@@ -131,6 +136,13 @@
             <scope>provided</scope>
         </dependency>
         {{/if_eq}}
+        {{#if_eq language 'Kotlin'}}
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging-jvm</artifactId>
+            <version>${kotlin-logging.version}</version>
+        </dependency>
+        {{/if_eq}}
 
         <!--test-->
         <dependency>
@@ -138,6 +150,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        {{#if_eq language 'Kotlin'}}
+        <dependency>
+            <groupId>org.mockito.kotlin</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <version>${mockito-kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+        {{/if_eq}}
     </dependencies>
 
     <build>
