--- a/plop-templates/adapter/payout/pom.xml
+++ b/plop-templates/adapter/payout/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.rbkmoney</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>1.0.9</version>
+        <version>1.2.7</version>
     </parent>
 
     <artifactId>adapter-{{kebabCase bank_name}}-payout</artifactId>
@@ -131,6 +131,12 @@
             <scope>provided</scope>
         </dependency>
         {{/if_eq}}
+        {{#if_eq language 'Kotlin'}}
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging-jvm</artifactId>
+        </dependency>
+        {{/if_eq}}
 
         <!--test-->
         <dependency>
@@ -138,6 +144,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        {{#if_eq language 'Kotlin'}}
+        <dependency>
+            <groupId>org.mockito.kotlin</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <scope>test</scope>
+        </dependency>
+        {{/if_eq}}
     </dependencies>
 
     <build>
