added depending step

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -36,6 +36,7 @@ jobs:
 
 
   test-with-maven:
+    needs: build-with-npm
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
