--- a/plop-templates/adapter/payout/pom.xml
+++ b/plop-templates/adapter/payout/pom.xml
@@ -85,6 +85,7 @@
         <dependency>
             <groupId>com.rbkmoney.adapter-thrift-lib</groupId>
             <artifactId>cds-utils</artifactId>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
