rename output workdir

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -17,8 +17,8 @@ jobs:
       - run: npm run plop java-library kotlin-library test Kotlin output/kotlin-library n
       - run: npm run plop java-service java-service test Java output/java-service n
       - run: npm run plop java-service kotlin-service test Kotlin output/kotlin-service n
-      - run: npm run plop java-adapter bank test Java true output/java-bank n
-      - run: npm run plop java-adapter bank test Kotlin true output/kotlin-bank n
+      - run: npm run plop java-adapter bank test Java true output/java-bank-acquiring n
+      - run: npm run plop java-adapter bank test Kotlin true output/kotlin-bank-acquiring n
       - run: npm run plop java-adapter-payout bank test Java true output/java-bank-payout n
       - run: npm run plop java-adapter-payout bank test Kotlin true output/kotlin-bank-payout n
       - run: npm run plop swag-template-3.0 swag swag output/swag n
@@ -70,10 +70,10 @@ jobs:
         working-directory: output/kotlin-bank-payout/
       - name: Test build of java-bank
         run: mvn verify
-        working-directory: output/java-bank/
+        working-directory: output/java-bank-acquiring/
       - name: Test build of kotlin-bank
         run: mvn verify
-        working-directory: output/kotlin-bank/
+        working-directory: output/kotlin-bank-acquiring/
       - name: Test build of swag
         run: mvn verify
         working-directory: output/swag/
